  source directory is specified multiple times.  Now, consistent with other
  file types, a warning is issued for source directories with duplicate names,
  or with -H the directory is copied again using the symlink name.

  head, od, split, tac, tail, and wc no longer mishandle input from files in
  /proc and /sys file systems that report somewhat-incorrect file sizes.

  paste no longer truncates output for large input files.  This would happen
  for example with files larger than 4GiB on 32 bit systems with a '\n'
  character at the 4GiB position.
  [the bug dates back to the initial implementation]

  rm indicates the correct number of arguments in its confirmation prompt,
  on all platforms.  [bug introduced in coreutils-8.22]

  shuf -i with a single redundant operand, would crash instead of issuing
  a diagnostic.  [bug introduced in coreutils-8.22]

  tail releases inotify resources when unused.  Previously it could exhaust
  resources with many files, or with -F if files were replaced many times.
  [bug introduced in coreutils-7.5]

  tail -f again follows changes to a file after it's renamed.
  [bug introduced in coreutils-7.5]

  tail --follow no longer misses changes to files if those files were
  replaced before inotify watches were created.
  [bug introduced in coreutils-7.5]

  tail --follow consistently outputs all data for a truncated file.
  [bug introduced in the beginning]

** New features

  chroot accepts the new --skip-chdir option to not change the working directory
  to "/" after changing into the chroot(2) jail, thus retaining the current wor-
  king directory.  The new option is only permitted if the new root directory is
  the old "/", and therefore is useful with the --group and --userspec options.

  dd accepts a new status=progress level to print data transfer statistics
  on stderr approximately every second.

  split accepts a new --separator option to select a record separator character
  other than the default newline character.
